// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`login reducer should handle LOGIN_FAILURE 1`] = `
Object {
  "login_status": "logged_out",
}
`;

exports[`login reducer should handle LOGIN_SUCCESS 1`] = `
Object {
  "login_status": "logged_in",
}
`;

exports[`login reducer should handle LOGOUT_SUCCESS 1`] = `
Object {
  "login_status": "logged_out",
}
`;

exports[`login reducer should return the initial state 1`] = `
Object {
  "login_status": "logged_out",
}
`;
